force-app/main/default/objects/Data_Sync_Job__c/Data_Sync_Job__c.object-meta.xml
<CustomObject>
    <description>Use to start a push or pull of data to a system.</description>
    <label>Data Sync Job</label>
    <nameField>
        <displayFormat>DSJ-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Sync Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>