force-app/main/default/objects/Data_Sync_Job__c/fields/Callback_Response_Config__c.field-meta.xml
<CustomField>
    <fullName>Callback_Response_Config__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Callback/Response Config</label>
    <referenceTo>Data_Sync_Job_Config__c</referenceTo>
    <relationshipLabel>Data Sync Jobs (Callback/Response Config)</relationshipLabel>
    <relationshipName>Data_Sync_Jobs1</relationshipName>
    <type>Lookup</type>
</CustomField>