force-app/main/default/objects/Data_Sync_Job__c/fields/Config__c.field-meta.xml
<CustomField>
    <fullName>Config__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Contains the details how to complete the job.</inlineHelpText>
    <label>Config</label>
    <referenceTo>Data_Sync_Job_Config__c</referenceTo>
    <relationshipLabel>Data Sync Jobs</relationshipLabel>
    <relationshipName>Data_Sync_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>