force-app/main/default/objects/Data_Sync_Job__c/fields/Is_More_Records__c.field-meta.xml
<CustomField>
    <fullName>Is_More_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is More Records</label>
    <type>Checkbox</type>
</CustomField>