force-app/main/default/objects/Data_Sync_Job__c/fields/Is_Pagination_Record_Created__c.field-meta.xml
<CustomField>
    <fullName>Is_Pagination_Record_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Pagination Record Created</label>
    <type>Checkbox</type>
</CustomField>