force-app/main/default/objects/Data_Sync_Job__c/fields/Per_Page_Record_Count__c.field-meta.xml
<CustomField>
    <fullName>Per_Page_Record_Count__c</fullName>
    <label>Per Page Record Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>