force-app/main/default/objects/Data_Sync_Job__c/fields/Service_URL__c.field-meta.xml
<CustomField>
    <fullName>Service_URL__c</fullName>
    <label>Service URL</label>
    <type>TextArea</type>
</CustomField>