force-app/main/default/objects/Data_Sync_Job__c/fields/Total_Number_Of_Page__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_Of_Page__c</fullName>
    <label>Total Number Of Page</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>