force-app/main/default/objects/Data_Sync_Job__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Action__c</columns>
    <columns>External_System__c</columns>
    <columns>Config__c</columns>
    <columns>Is_More_Records__c</columns>
    <columns>Page_Number__c</columns>
    <columns>Total_Number_Of_Page__c</columns>
    <columns>Response_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>